<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_income"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/income_title" />
        <item
            android:id="@+id/nav_budget_limits"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/budget_limits_title" />
        <item
            android:id="@+id/nav_currency"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/currency_settings" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/manage_categories" />
        <item
            android:id="@+id/nav_export_csv"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/export_csv" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout" />
    </group>

</menu>
